# Al-Zaman

./: README.md  al-zaman.py  al-zaman.spec  alzaman.spec  pyproject.toml  requirements.txt  setup.py
alzaman/: __init__.py  cli.py
wiki/: Home.md
